--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.cdnfonts.com/css/sporting-grotesque");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Sporting Grotesque", sans-serif;
+}
