--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); */
 
 * {
   font-family: "Sporting Grotesque", sans-serif;
